--- a/mandelbulber2/formula/ui/transf_difs_torus.ui
+++ b/mandelbulber2/formula/ui/transf_difs_torus.ui
@@ -287,15 +287,15 @@
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_290">
+        <item row="3" column="0">
+         <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
           <property name="text">
-           <string>base color:</string>
+           <string notr="true">cumulative</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_y">
+         <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs0">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -322,7 +322,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="1" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -353,14 +353,7 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_292">
-          <property name="text">
-           <string>hollow color:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_z">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -388,45 +381,24 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs0">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="prefix">
-           <string/>
-          </property>
-          <property name="suffix">
-           <string/>
-          </property>
-          <property name="decimals">
-           <number>6</number>
-          </property>
-          <property name="minimum">
-           <double>-100.000000000000000</double>
-          </property>
-          <property name="maximum">
-           <double>100.000000000000000</double>
-          </property>
-          <property name="singleStep">
-           <double>0.100000000000000</double>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_292">
+          <property name="text">
+           <string>hollow color:</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_294">
+          <property name="text">
+           <string>iter add scale::</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
          <widget class="QLabel" name="label_293">
           <property name="text">
            <string>palette offset:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
-          <property name="text">
-           <string notr="true">iter add scale:</string>
           </property>
          </widget>
         </item>
@@ -624,12 +596,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>126</x>
-     <y>330</y>
+     <x>128</x>
+     <y>391</y>
     </hint>
     <hint type="destinationlabel">
-     <x>218</x>
-     <y>330</y>
+     <x>327</x>
+     <y>360</y>
     </hint>
    </hints>
   </connection>
@@ -640,12 +612,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>40</x>
-     <y>319</y>
+     <x>42</x>
+     <y>391</y>
     </hint>
     <hint type="destinationlabel">
-     <x>225</x>
-     <y>358</y>
+     <x>334</x>
+     <y>332</y>
     </hint>
    </hints>
   </connection>
