--- a/mandelbulber2/formula/ui/transf_difs_prism_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_prism_v2.ui
@@ -570,16 +570,54 @@
           </layout>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_24" stretch="0,1">
-           <item>
-            <widget class="QLabel" name="label_286">
+          <layout class="QGridLayout" name="gridLayout_25" columnstretch="0,1">
+           <property name="spacing">
+            <number>2</number>
+           </property>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_14">
              <property name="text">
-              <string>base color:</string>
+              <string>palette offset:</string>
              </property>
             </widget>
            </item>
-           <item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_15">
+             <property name="text">
+              <string>iter add scale:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
             <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_y">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="prefix">
+              <string/>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="decimals">
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-99.998999999999995</double>
+             </property>
+             <property name="maximum">
+              <double>99.998999999999995</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs0">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
@@ -707,8 +745,15 @@
                 </property>
                </widget>
               </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_179">
+                <property name="text">
+                 <string>cap col:</string>
+                </property>
+               </widget>
+              </item>
               <item row="2" column="1">
-               <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs0">
+               <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                   <horstretch>0</horstretch>
@@ -733,12 +778,8 @@
                 <property name="singleStep">
                  <double>0.100000000000000</double>
                 </property>
-               </widget>
-              </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_179">
-                <property name="text">
-                 <string>cap col:</string>
+                <property name="value">
+                 <double>0.000000000000000</double>
                 </property>
                </widget>
               </item>
@@ -748,84 +789,11 @@
           </widget>
          </item>
          <item>
-          <layout class="QGridLayout" name="gridLayout_25" columnstretch="0,1">
-           <property name="spacing">
-            <number>2</number>
+          <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
+           <property name="text">
+            <string notr="true">cumulative</string>
            </property>
-           <item row="0" column="0">
-            <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
-             <property name="text">
-              <string notr="true">iteration add</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_14">
-             <property name="text">
-              <string>palette offset:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.998999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.998999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
-             </property>
-             <property name="value">
-              <double>0.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-100.000000000000000</double>
-             </property>
-             <property name="maximum">
-              <double>100.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
-             </property>
-            </widget>
-           </item>
-          </layout>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -1050,22 +1018,6 @@
     <hint type="destinationlabel">
      <x>204</x>
      <y>617</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>checkBox_fold_color_aux_color_enabledB_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>spinbox_transf_offset_0</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>57</x>
-     <y>610</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>252</x>
-     <y>644</y>
     </hint>
    </hints>
   </connection>
