--- a/mandelbulber2/formula/ui/transf_difs_torus_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_torus_v2.ui
@@ -650,41 +650,10 @@
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="1" column="0">
-            <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_291">
              <property name="text">
-              <string notr="true">iter add scale</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.998999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.998999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
-             </property>
-             <property name="value">
-              <double>0.000000000000000</double>
+              <string>palette offset:</string>
              </property>
             </widget>
            </item>
@@ -716,21 +685,14 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_290">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_292">
              <property name="text">
-              <string>base color:</string>
+              <string>iter add scale:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_291">
-             <property name="text">
-              <string>palette offset:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
+           <item row="1" column="1">
             <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs0">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -755,6 +717,13 @@
              </property>
              <property name="singleStep">
               <double>0.100000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
+             <property name="text">
+              <string notr="true">cumulative</string>
              </property>
             </widget>
            </item>
